[package]
name = "smarticles"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
byteorder = "1.4.3"
eframe = { version = "0.22", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    #"wgpu"           # Alternative backend if "glow" gives your trouble.
] }
egui = "0.22.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
