[package]
name = "smarticles"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
eframe = "0.19.0"
egui = "0.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.3"
