[package]
name = "smarticles"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.2"
base64 = "0.13.0"
byteorder = "1.4.3"
eframe = "0.19.0"
egui = "0.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.9.0"
